--- a/dresden/index.html
+++ b/dresden/index.html
@@ -36,47 +36,57 @@
 
     <section id="content">
         <div class="container">
-            <h1 id="content-header">CITY</h1>
+            <h1 id="content-header">Drezno</h1>
 
             <div class="data">
                 <div class="container">
-                    <h1>Lorem Ipsum</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia inventore quidem expedita ratione
-                        molestiae amet recusandae voluptate quis enim officiis dolores reprehenderit eos autem veritatis
-                        tempora quo, pariatur animi nobis.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium optio dolorem recusandae magni,
-                        beatae ea quia explicabo. Quis culpa expedita harum unde ad aliquid praesentium, alias, cum mollitia
-                        sequi rem!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi cum minima porro ex. Exercitationem
-                        enim adipisci saepe eum sit non, ipsum ab aspernatur omnis assumenda eius, delectus similique minima
-                        incidunt.</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia inventore quidem expedita ratione
-                        molestiae amet recusandae voluptate quis enim officiis dolores reprehenderit eos autem veritatis
-                        tempora quo, pariatur animi nobis.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium optio dolorem recusandae magni,
-                        beatae ea quia explicabo. Quis culpa expedita harum unde ad aliquid praesentium, alias, cum mollitia
-                        sequi rem!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi cum minima porro ex. Exercitationem
-                        enim adipisci saepe eum sit non, ipsum ab aspernatur omnis assumenda eius, delectus similique minima
-                        incidunt.</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia inventore quidem expedita ratione
-                        molestiae amet recusandae voluptate quis enim officiis dolores reprehenderit eos autem veritatis
-                        tempora quo, pariatur animi nobis.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium optio dolorem recusandae magni,
-                        beatae ea quia explicabo. Quis culpa expedita harum unde ad aliquid praesentium, alias, cum mollitia
-                        sequi rem!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi cum minima porro ex. Exercitationem
-                        enim adipisci saepe eum sit non, ipsum ab aspernatur omnis assumenda eius, delectus similique minima
-                        incidunt.</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia inventore quidem expedita ratione
-                        molestiae amet recusandae voluptate quis enim officiis dolores reprehenderit eos autem veritatis
-                        tempora quo, pariatur animi nobis.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium optio dolorem recusandae magni,
-                        beatae ea quia explicabo. Quis culpa expedita harum unde ad aliquid praesentium, alias, cum mollitia
-                        sequi rem!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi cum minima porro ex. Exercitationem
-                        enim adipisci saepe eum sit non, ipsum ab aspernatur omnis assumenda eius, delectus similique minima
-                        incidunt.</p>
+                    <h1>Drezno</h1>
+                    <p>Drezno miasto we wschodnich Niemczech, na Pogórzu Zachodniosudeckim, położone nad Łabą, stolica
+                        kraju związkowego Saksonia. Aglomeracja drezdeńska liczy ok. 1,036 mln mieszkańców (2004).</p>
+                    <p>Analiza śladów archeologicznych wskazuje na to, że zasiedlenie obszaru, na którym powstało
+                        miasto, nastąpiło już w epoce kamienia. W dokumentach zachowanych z 1206 nadmieniono po raz
+                        pierwszy istnienie Drezna, które następnie awansowało do rangi miasta-rezydencji Elektorów
+                        Rzeszy, króla Polski, a następnie króla Saksonii.</p>
+                    <p>Drezno pełni rolę gospodarczego i kulturalnego centrum Saksonii. Stanowi duży węzeł komunikacyjny
+                        (lotnisko międzynarodowe), z ośrodkami przemysłu maszynowego, produkcji klisz fotograficznych,
+                        przemysłu chemicznego i farmaceutycznego.</p>
+                    <p> Miasto jest ośrodkiem turystycznym, zwanym „miastem baroku” lub „Florencją Północy”, znajduje
+                        się tu wiele zabytków i muzeów, słynna jest Galeria Obrazów (Gemäldegalerie Alte Meister).
+                        Znajduje się tu również fabryka samochodów Volkswagen. Drezno jest obok Lipska centralnym
+                        miastem obszaru metropolitalnego centralnych Niemiec, w skład którego wchodzi też dziesięć
+                        innych miast z krajów związkowych Saksonii, Saksonii-Anhalt i Turyngii.</p>
+                    <h2>Nazwa</h2>
+                    <p>Nazwa miejscowości wywodzi się od osady założonej w tym miejscu przez Słowian połabskich o nazwie
+                        Drezdno, stąd używa się odmiany w formie przymiotnikowej „drezdeński”. Według językoznawców
+                        bezpośrednio pochodzi ona od słowiańskiego słowa „drezga” (pol. „drzazga”). oznacza
+                        osadę ludzi mieszkających w lesie bądź „leśnych ludzi”.</p>
+                    <p>Niemiecka nazwa Dresden jest zgermanizowaną górnołużycką nazwą miejscowości Drježdźany (pol.
+                        Drężdżany). Podaje się również inne znaczenie, wywodząc nazwę od starołużyckiego Drežďany,
+                        oznaczającego „mieszkańców mokradeł”.</p>
+                    <h2>Historia</h2>
+                    <p>Już we wczesnej epoce kamienia powstały w okolicach dzisiejszego Drezna pierwsze osady.
+                        Wybudowany w V w. p.n.e. rondel Drezno-Nickern jest przykładem pierwszych monumentalnych budowli
+                        na tym obszarze. We wczesnym średniowieczu powstał bród prowadzący przez Łabę na wysokości
+                        dzisiejszego Starego Miasta.</p>
+                    <p>Jednak słowiańska osada, mimo korzystnego położenia nad Łabą i żyznych ziem, nie mogła się
+                        rozwijać z powodu otaczającego ją gęstego lasu. Osiedle należało w tym czasie do Marchii
+                        Miśnieńskiej, która w przybliżeniu obejmowała w latach 986 do 1423 obszar dzisiejszej Saksonii
+                        (bez
+                        Milska). W 1002 obszar dzisiejszego Drezna wraz z Miśnią był we władaniu Bolesława Chrobrego.
+                    </p>
+                    <p>Pierwsza udokumentowana wzmianka o Dreźnie znalazła się w piśmie „Acta sunt hec Dresdene” z 1206
+                        roku. Użyte w dokumencie określenie „Dresdene” pochodzi przypuszczalnie od starołużyckiego słowa
+                        Drežďany (mieszkańcy bagien), którym wcześniej nazywano mieszkańców słowiańskiej,
+                        rybacko-rolniczej osady, ulokowanej na prawym brzegu Łaby, w najszerszym miejscu kotliny
+                        drezdeńskiej.</p>
+                    <p> Na lewym brzegu powstał z kolei gród, strzegący brodu na Łabie, którym przekraczał rzekę
+                        ruchliwy trakt handlowy, biegnący przedgórzami Rudaw na Śląsk. W dokumencie „Acta sunt hec in
+                        civitate nostra Dresdene” z 21 stycznia 1216 określa się już Drezno jako miasto. Po śmierci
+                        margrabiego Henryka III Dostojnego w 1288 roku Drezno przeszło we władanie Czech, a następnie w
+                        1316 Marchii Brandenburskiej, by powrócić w granice Marchii Miśnieńskiej w 1319 roku. Do dzisiaj
+                        nie odnaleziono dokumentu przyznania praw miejskich, jednak od 1350 roku nazywa się już
+                        samodzielną osadę na prawym brzegu Łaby Starym Dreznem „Antiqua Dressin”, a w 1403 roku
+                        landgraf Wilhelm I uznał tę osadę oficjalnie za miasto.</p>
                 </div>
             </div>
 
