--- a/dresden/index.html
+++ b/dresden/index.html
@@ -41,6 +41,29 @@
             <div class="data">
                 <div class="container">
                     <h1>Drezno</h1>
+                    <p>Drezno jest historycznym
+                        miastem w Niemczech, leżącym nad brzegiem
+                        rzeki Laby, w kraju zwiazkowym Saksonia. To fascynujace miasto ma bogata historie, piekna
+                        architekture i wiele atrakcji turystycznych.
+                        Jednym z najbardziej charakterystycznych
+                        zabytkow w Dreźnie jest Zwinger, barokowy
+                        pałac z ogrodem, który go otacza. To miejsce,
+                        ktore koniecznie trzeba odwiedzic. Innym
+                        znanym zabytkiem jest Semperoper, opera drezdenska, która jest jednym z
+                        najwazniejszych teatrów operowych w
+                        Europie.</p>
+                    <p> Drezno jest rowniez znane ze swojej pieknej
+                        starówki, zwanej Altstadt. Znajduje sie tam
+                        wiele zabytkowych budynków, w tym słynny
+                        Kościół Marii Panny w Dreźnie (Frauenkirche), który jest symbolem miasta. Poza tym warto
+                        zobaczyć Zamek Drezdenski
+                        (Residenzschloss) oraz katedre św. Trójcy (Hofkirche).
+                        Miasto ma równiez wiele muzeow, takich jak Muzeum Historii Drezna (Dresdner Stadtmuseum) i
+                        Galeria Obrazów Starych Mistrzow (Gemäldegalerie Alte Meister), gdzie mozna podziwiac wybitne
+                        dzieta sztuki.
+                        Drezno jest równiez znane ze swojego
+                        corocznego festiwalu Striezelmarkt, który jest
+                        jednym z najstarszych i najwiekszych świątecznych jarmarków w Niemczech</p>
                     <p>Drezno miasto we wschodnich Niemczech, na Pogórzu Zachodniosudeckim, położone nad Łabą, stolica
                         kraju związkowego Saksonia. Aglomeracja drezdeńska liczy ok. 1,036 mln mieszkańców (2004).</p>
                     <p>Analiza śladów archeologicznych wskazuje na to, że zasiedlenie obszaru, na którym powstało
@@ -50,11 +73,6 @@
                     <p>Drezno pełni rolę gospodarczego i kulturalnego centrum Saksonii. Stanowi duży węzeł komunikacyjny
                         (lotnisko międzynarodowe), z ośrodkami przemysłu maszynowego, produkcji klisz fotograficznych,
                         przemysłu chemicznego i farmaceutycznego.</p>
-                    <p> Miasto jest ośrodkiem turystycznym, zwanym „miastem baroku” lub „Florencją Północy”, znajduje
-                        się tu wiele zabytków i muzeów, słynna jest Galeria Obrazów (Gemäldegalerie Alte Meister).
-                        Znajduje się tu również fabryka samochodów Volkswagen. Drezno jest obok Lipska centralnym
-                        miastem obszaru metropolitalnego centralnych Niemiec, w skład którego wchodzi też dziesięć
-                        innych miast z krajów związkowych Saksonii, Saksonii-Anhalt i Turyngii.</p>
                     <h2>Nazwa</h2>
                     <p>Nazwa miejscowości wywodzi się od osady założonej w tym miejscu przez Słowian połabskich o nazwie
                         Drezdno, stąd używa się odmiany w formie przymiotnikowej „drezdeński”. Według językoznawców
