--- a/dresden/index.html
+++ b/dresden/index.html
@@ -39,8 +39,9 @@
             <h1 id="content-header">Drezno</h1>
 
             <div class="data">
-                <div class="container">
-                    <h1>Drezno</h1>
+                <div class="container">     
+                    <h1>Jakie to miasto?</h1>
+                    
                     <p>Drezno jest historycznym
                         miastem w Niemczech, leżącym nad brzegiem
                         rzeki Laby, w kraju zwiazkowym Saksonia. To fascynujace miasto ma bogata historie, piekna
@@ -73,6 +74,7 @@
                     <p>Drezno pełni rolę gospodarczego i kulturalnego centrum Saksonii. Stanowi duży węzeł komunikacyjny
                         (lotnisko międzynarodowe), z ośrodkami przemysłu maszynowego, produkcji klisz fotograficznych,
                         przemysłu chemicznego i farmaceutycznego.</p>
+                        <img src="drezen.jpg" alt="drezno0">
                     <h2>Nazwa</h2>
                     <p>Nazwa miejscowości wywodzi się od osady założonej w tym miejscu przez Słowian połabskich o nazwie
                         Drezdno, stąd używa się odmiany w formie przymiotnikowej „drezdeński”. Według językoznawców
@@ -81,6 +83,7 @@
                     <p>Niemiecka nazwa Dresden jest zgermanizowaną górnołużycką nazwą miejscowości Drježdźany (pol.
                         Drężdżany). Podaje się również inne znaczenie, wywodząc nazwę od starołużyckiego Drežďany,
                         oznaczającego „mieszkańców mokradeł”.</p>
+                        <img src="drezno.jpg" alt="drezno1">
                     <h2>Historia</h2>
                     <p>Już we wczesnej epoce kamienia powstały w okolicach dzisiejszego Drezna pierwsze osady.
                         Wybudowany w V w. p.n.e. rondel Drezno-Nickern jest przykładem pierwszych monumentalnych budowli
@@ -105,6 +108,7 @@
                         nie odnaleziono dokumentu przyznania praw miejskich, jednak od 1350 roku nazywa się już
                         samodzielną osadę na prawym brzegu Łaby Starym Dreznem „Antiqua Dressin”, a w 1403 roku
                         landgraf Wilhelm I uznał tę osadę oficjalnie za miasto.</p>
+                        <img src="drezno2.jpg" alt="drezno2">
                 </div>
             </div>
 
