--- a/dresden/index.html
+++ b/dresden/index.html
@@ -39,9 +39,9 @@
             <h1 id="content-header">Drezno</h1>
 
             <div class="data">
-                <div class="container">     
-                    <h1>Jakie to miasto?</h1>
-                    
+                <div class="container">
+                    <h1 id="jakieto">Jakie to miasto?</h1>
+
                     <p>Drezno jest historycznym
                         miastem w Niemczech, leżącym nad brzegiem
                         rzeki Laby, w kraju zwiazkowym Saksonia. To fascynujace miasto ma bogata historie, piekna
@@ -74,8 +74,8 @@
                     <p>Drezno pełni rolę gospodarczego i kulturalnego centrum Saksonii. Stanowi duży węzeł komunikacyjny
                         (lotnisko międzynarodowe), z ośrodkami przemysłu maszynowego, produkcji klisz fotograficznych,
                         przemysłu chemicznego i farmaceutycznego.</p>
-                        <img src="drezen.jpg" alt="drezno0">
-                    <h2>Nazwa</h2>
+                    <img src="drezen.jpg" alt="drezno0">
+                    <h2 id="nazwa">Nazwa</h2>
                     <p>Nazwa miejscowości wywodzi się od osady założonej w tym miejscu przez Słowian połabskich o nazwie
                         Drezdno, stąd używa się odmiany w formie przymiotnikowej „drezdeński”. Według językoznawców
                         bezpośrednio pochodzi ona od słowiańskiego słowa „drezga” (pol. „drzazga”). oznacza
@@ -83,8 +83,8 @@
                     <p>Niemiecka nazwa Dresden jest zgermanizowaną górnołużycką nazwą miejscowości Drježdźany (pol.
                         Drężdżany). Podaje się również inne znaczenie, wywodząc nazwę od starołużyckiego Drežďany,
                         oznaczającego „mieszkańców mokradeł”.</p>
-                        <img src="drezno.jpg" alt="drezno1">
-                    <h2>Historia</h2>
+                    <img src="drezno.jpg" alt="drezno1">
+                    <h2 id="historia">Historia</h2>
                     <p>Już we wczesnej epoce kamienia powstały w okolicach dzisiejszego Drezna pierwsze osady.
                         Wybudowany w V w. p.n.e. rondel Drezno-Nickern jest przykładem pierwszych monumentalnych budowli
                         na tym obszarze. We wczesnym średniowieczu powstał bród prowadzący przez Łabę na wysokości
@@ -108,15 +108,48 @@
                         nie odnaleziono dokumentu przyznania praw miejskich, jednak od 1350 roku nazywa się już
                         samodzielną osadę na prawym brzegu Łaby Starym Dreznem „Antiqua Dressin”, a w 1403 roku
                         landgraf Wilhelm I uznał tę osadę oficjalnie za miasto.</p>
-                        <img src="drezno2.jpg" alt="drezno2">
+                    <img src="drezno2.jpg" alt="drezno2">
+                    <h2 id="zabytki">zabytki miasta</h2>
+                    <ul>
+                        <li>Stare miasto w Dreźnie</li>
+                        <p>Stare miasto to właściwie centrum Drezna, w którego obrębie ulokowane są najważniejsze
+                            zabytki</p><br>
+                        <li>Pałac Zwinger</li>
+                        <p>Pałac Zwinger, znajdujący się w samym centrum miasta, jest nazywany przez przewodników perłą
+                            baroku. Został wybudowany na polecenie Augusta II Mocnego i architektonicznie nawiązuje do
+                            stylu rokoko, popularnego pod koniec epoki barokowej.</p><br>
+                        <li>Kościół Marii Panny</li>
+                        <p>odnowiony w 2005 roku najważniejszy kościół protestancki. zabytek,zawdzięcza się inwencji Augusta II Mocnego, wybudowany również w stylu barokowym</p><br>
+                        <li>Muzeum Józefa Ignacego Kraszewskiego</li>
+                        <p>Stolicę Saksonii odwiedzało wielu polskich artystów, pisarzy i poetów. Niektórzy z nich nawet osiedlili się na stałe i wybudowali swoje rezydencje. Jednym z nich był Józef Ignacy Kraszewski. W jego ówczesnym domu znajduje się teraz muzeum poświęcone życiu i twórczości polskiego pisarza.</p><br>
+                        <li>Most Augusta</li>
+                        <p>Most powstał dopiero z początkiem XX wieku, chociaż pierwsza wersja została wybudowana w XVIII wieku na polecenie Augusta Mocnego. Współcześnie most został tak nazwany na cześć ostatniego króla Saksonii Fryderyka Augusta III.</p><br>
+                        <li>Galeria Obrazów Starych Mistrzów</li>
+                        <p>Galeria, która znajduje się w pałacu barokowym pałacu Zwinger to jedna z najchętniej odwiedzanych galerii w całych Niemczech. Kolekcjonowanie dzieł rozpoczął już książę August Wettyn, a jego poczynania dokończyli polscy władcy August II i August III Sas. To właśnie za ich sprawą udało się sprowadzić do Drezna najokazalsze dzieła sztuki, m.in. „Madonnę Sykstyńską” Rafaela</p>
+                    </ul>
+                    <h2 id="sławniludzie">sławni ludzie z państwa</h2>
+                    <ul>
+                        <li>August II Mocny</li>
+                        <p> w latach 1697 do 1706 i 1709 do 1733 elekcyjny król Polski; pierwszy król Polski z saskiej dynastii Wettynów. Jego przydomek jest zazwyczaj wiązany z jego nieprzeciętną siłą, dzięki której potrafił podobno zginać podkowy gołymi rękoma.</p><br>
+                        <li>August III</li>
+                        <p>w latach 1733 do 1763 król Polski oraz jako Fryderyk August II elektor saski; syn Augusta II z saskiej dynastii Wettynów i Krystyny Eberhardyny Bayreuckiej.</p><br>
+                        <li>Aleksander Bronikowski</li>
+                        <p>to pisarz, autor powieści historycznych, major Wojska Polskiego Królestwa Kongresowego.</p><br>
+                        <li>Alojzy Bruhl</li>
+                        <p>starosta warszawski, generał artylerii. Urodził się 21 czerwca w Dreźnie, jako najstarszy syn Henryka Brühla (ministra Augusta III) oraz Marii Anny z domu Kolowrath.</p><br>
+                        <li>Fryderyk August</li>
+                        <p>Najstarszy syn księcia elektora Fryderyka Krystiana (1722 do 1763) i księżniczki bawarskiej Marii Antoniny z dynastii Wittelsbachów (1724 do 1780), który dożył wieku dorosłego. Wnuk króla polskiego i wielkiego księcia litewskiego Augusta III Sasa oraz prawnuk króla polskiego i wielkiego księcia litewskiego Augusta II Mocnego</p><br>
+                    </ul>
                 </div>
             </div>
 
             <div class="sidebar">
                 <div class="container">
-                    <p><a href="#"><span>1.</span> Navigation 1</a></p>
-                    <p><a href="#"><span>2.</span> Navigation 2</a></p>
-                    <p><a href="#"><span>3.</span> Navigation 3</a></p>
+                    <p><a href="#jakieto"><span>1.</span> jakie to miasto?</a></p>
+                    <p><a href="#nazwa"><span>2.</span> nazwa</a></p>
+                    <p><a href="#historia"><span>3.</span> historia</a></p>
+                    <p><a href="#zabytki"><span>4.</span> zabytki miasta</a></p>
+                    <p><a href="#sławniludzie"><span>4.</span> sławni ludzie z miasta</a></p>
                 </div>
             </div>
         </div>
