--- a/dresden/index.html
+++ b/dresden/index.html
@@ -113,32 +113,42 @@
                     <ul>
                         <li>Stare miasto w Dreźnie</li>
                         <p>Stare miasto to właściwie centrum Drezna, w którego obrębie ulokowane są najważniejsze
-                            zabytki</p><br>
+                            zabytki</p>
+                            <img src="staremiasto.jpg" alt="stare miasto"><br>
                         <li>Pałac Zwinger</li>
                         <p>Pałac Zwinger, znajdujący się w samym centrum miasta, jest nazywany przez przewodników perłą
                             baroku. Został wybudowany na polecenie Augusta II Mocnego i architektonicznie nawiązuje do
-                            stylu rokoko, popularnego pod koniec epoki barokowej.</p><br>
+                            stylu rokoko, popularnego pod koniec epoki barokowej.</p>
+                            <img src="pałaczwinger.jpg" alt="pałac"><br>
                         <li>Kościół Marii Panny</li>
                         <p>odnowiony w 2005 roku najważniejszy kościół protestancki. zabytek,zawdzięcza się inwencji Augusta II Mocnego, wybudowany również w stylu barokowym</p><br>
                         <li>Muzeum Józefa Ignacego Kraszewskiego</li>
-                        <p>Stolicę Saksonii odwiedzało wielu polskich artystów, pisarzy i poetów. Niektórzy z nich nawet osiedlili się na stałe i wybudowali swoje rezydencje. Jednym z nich był Józef Ignacy Kraszewski. W jego ówczesnym domu znajduje się teraz muzeum poświęcone życiu i twórczości polskiego pisarza.</p><br>
+                        <p>Stolicę Saksonii odwiedzało wielu polskich artystów, pisarzy i poetów. Niektórzy z nich nawet osiedlili się na stałe i wybudowali swoje rezydencje. Jednym z nich był Józef Ignacy Kraszewski. W jego ówczesnym domu znajduje się teraz muzeum poświęcone życiu i twórczości polskiego pisarza.</p>
+                        <img src="kościół.jpg" alt="kościół"><br>
                         <li>Most Augusta</li>
-                        <p>Most powstał dopiero z początkiem XX wieku, chociaż pierwsza wersja została wybudowana w XVIII wieku na polecenie Augusta Mocnego. Współcześnie most został tak nazwany na cześć ostatniego króla Saksonii Fryderyka Augusta III.</p><br>
+                        <p>Most powstał dopiero z początkiem XX wieku, chociaż pierwsza wersja została wybudowana w XVIII wieku na polecenie Augusta Mocnego. Współcześnie most został tak nazwany na cześć ostatniego króla Saksonii Fryderyka Augusta III.</p>
+                        <img src="most.jpg" alt="most"><br>
                         <li>Galeria Obrazów Starych Mistrzów</li>
                         <p>Galeria, która znajduje się w pałacu barokowym pałacu Zwinger to jedna z najchętniej odwiedzanych galerii w całych Niemczech. Kolekcjonowanie dzieł rozpoczął już książę August Wettyn, a jego poczynania dokończyli polscy władcy August II i August III Sas. To właśnie za ich sprawą udało się sprowadzić do Drezna najokazalsze dzieła sztuki, m.in. „Madonnę Sykstyńską” Rafaela</p>
+                        <img src="galeria.jpg" alt="galeria">
                     </ul>
                     <h2 id="sławniludzie">sławni ludzie z państwa</h2>
                     <ul>
                         <li>August II Mocny</li>
-                        <p> w latach 1697 do 1706 i 1709 do 1733 elekcyjny król Polski; pierwszy król Polski z saskiej dynastii Wettynów. Jego przydomek jest zazwyczaj wiązany z jego nieprzeciętną siłą, dzięki której potrafił podobno zginać podkowy gołymi rękoma.</p><br>
+                        <p> w latach 1697 do 1706 i 1709 do 1733 elekcyjny król Polski; pierwszy król Polski z saskiej dynastii Wettynów. Jego przydomek jest zazwyczaj wiązany z jego nieprzeciętną siłą, dzięki której potrafił podobno zginać podkowy gołymi rękoma.</p>
+                        <img src="augustII.jpg" alt="augustII"><br>
                         <li>August III</li>
-                        <p>w latach 1733 do 1763 król Polski oraz jako Fryderyk August II elektor saski; syn Augusta II z saskiej dynastii Wettynów i Krystyny Eberhardyny Bayreuckiej.</p><br>
+                        <p>w latach 1733 do 1763 król Polski oraz jako Fryderyk August II elektor saski; syn Augusta II z saskiej dynastii Wettynów i Krystyny Eberhardyny Bayreuckiej.</p>
+                        <img src="augustIII.jpg" alt="augustIII"><br>
                         <li>Aleksander Bronikowski</li>
-                        <p>to pisarz, autor powieści historycznych, major Wojska Polskiego Królestwa Kongresowego.</p><br>
+                        <p>to pisarz, autor powieści historycznych, major Wojska Polskiego Królestwa Kongresowego.</p>
+                        <img src="alexanderaugust.jpg" alt="alexander"><br>
                         <li>Alojzy Bruhl</li>
-                        <p>starosta warszawski, generał artylerii. Urodził się 21 czerwca w Dreźnie, jako najstarszy syn Henryka Brühla (ministra Augusta III) oraz Marii Anny z domu Kolowrath.</p><br>
+                        <p>starosta warszawski, generał artylerii. Urodził się 21 czerwca w Dreźnie, jako najstarszy syn Henryka Brühla (ministra Augusta III) oraz Marii Anny z domu Kolowrath.</p>
+                        <img src="alojzy.jpg" alt="alojzy"><br>
                         <li>Fryderyk August</li>
-                        <p>Najstarszy syn księcia elektora Fryderyka Krystiana (1722 do 1763) i księżniczki bawarskiej Marii Antoniny z dynastii Wittelsbachów (1724 do 1780), który dożył wieku dorosłego. Wnuk króla polskiego i wielkiego księcia litewskiego Augusta III Sasa oraz prawnuk króla polskiego i wielkiego księcia litewskiego Augusta II Mocnego</p><br>
+                        <p>Najstarszy syn księcia elektora Fryderyka Krystiana (1722 do 1763) i księżniczki bawarskiej Marii Antoniny z dynastii Wittelsbachów (1724 do 1780), który dożył wieku dorosłego. Wnuk króla polskiego i wielkiego księcia litewskiego Augusta III Sasa oraz prawnuk króla polskiego i wielkiego księcia litewskiego Augusta II Mocnego</p>
+                        <img src="fryderyk.jpg" alt="fryderyk"><br>
                     </ul>
                 </div>
             </div>
